--- a/Uber_Eats/Index.html
+++ b/Uber_Eats/Index.html
@@ -95,6 +95,20 @@
     .footer-column {
       display: inline-block;
     }
+    .black {
+      display: flex;
+      justify-content: space-around;
+    }
+    .uber-links {
+      line-height: 40px;
+    }
+    .uber-links-anchor {
+      text-decoration: none;
+      color: black;
+    }
+    .uber-links-anchor:hover {
+      text-decoration: underline;
+    }
   </style>
   <body>
     <div>
@@ -287,23 +301,27 @@
               />
             </div>
           </div>
-          <div class="red footer-column">
+          <div class="red footer-column uber-links">
             <dl>
-              <dd><a href="">Get Help</a></dd>
-              <dd><a href="">Buy gift cards</a></dd>
-              <dd><a href="">Add your restaurant</a></dd>
-              <dd><a href="">Create a bunsiness account</a></dd>
-              <dd><a href="">Promotions</a></dd>
+              <dd><a href="" class="uber-links-anchor">Get Help</a></dd>
+              <dd><a href="" class="uber-links-anchor">Buy gift cards</a></dd>
+              <dd>
+                <a href="" class="uber-links-anchor">Add your restaurant</a>
+              </dd>
+              <dd>
+                <a href="" class="uber-links-anchor">Create a bunsiness account</a>
+              </dd>
+              <dd><a href="" class="uber-links-anchor">Promotions</a></dd>
             </dl>
           </div>
-          <div class="red footer-column">
+          <div class="red footer-column uber-links">
             <dl>
-              <dd><a href="">Restaurant near me</a></dd>
-              <dd><a href="">View all cities</a></dd>
-              <dd><a href="">View all countries</a></dd>
-              <dd><a href="">Pickup near me</a></dd>
-              <dd><a href="">About Uber Eats</a></dd>
-              <dd><a href="">English</a></dd>
+              <dd><a href="" class="uber-links-anchor">Restaurant near me</a></dd>
+              <dd><a href="" class="uber-links-anchor">View all cities</a></dd>
+              <dd><a href="" class="uber-links-anchor">View all countries</a></dd>
+              <dd><a href="" class="uber-links-anchor">Pickup near me</a></dd>
+              <dd><a href="" class="uber-links-anchor">About Uber Eats</a></dd>
+              <dd><a href="" class="uber-links-anchor">English</a></dd>
             </dl>
           </div>
         </div>
