--- a/Practice/Project/index.html
+++ b/Practice/Project/index.html
@@ -102,6 +102,11 @@
           </div>
         </div>
       </div>
+      <div id="section-5-2">
+        <div class="overlay-container">
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
