--- a/Practice/Project/index.html
+++ b/Practice/Project/index.html
@@ -102,9 +102,51 @@
           </div>
         </div>
       </div>
-      <div id="section-5-2">
-        <div class="overlay-container">
-          
+      <div id="section-5">
+        <div id="section-5-1">
+          <h1>Store</h1>
+          <p>
+            Neque laoreet suspendisse interdum consectetur libero id faucibus
+            nisl tincidunt.<br />Dictum fusce ut placerat orci nulla
+            pellentesque dignissim enim sit.
+          </p>
+        </div>
+        <div id="section-5-2">
+          <div id="section-5-2-1">
+            <img src="./Images/stroe-img-1.jpg" />
+            <p>
+              A lacus vestibulum sed. Amet purus gravida quis blandit turpis.
+              Enim facilisis gravida neque convallis.
+            </p>
+            <button class="btn_3">Visit Now</button>
+          </div>
+          <div id="section-5-2-1">
+            <img src="./Images/store-img-2.jpg" />
+            <p>
+              A lacus vestibulum sed. Amet purus gravida quis blandit turpis.
+              Enim facilisis gravida neque convallis.
+            </p>
+            <button class="btn_3">Visit Now</button>
+          </div>
+          <div id="section-5-2-1">
+            <img src="./Images/store-img-3.jpg" />
+            <p>
+              A lacus vestibulum sed. Amet purus gravida quis blandit turpis.
+              Enim facilisis gravida neque convallis.
+            </p>
+            <button class="btn_3">Visit Now</button>
+          </div>
+        </div>
+      </div>
+      <div id="section-6">
+        <img class="img" src="./Images/Section-6-bg-img.jpg" />
+        <div id="section-6-1">
+          <h1>Company Profile</h1>
+          <p>
+            Neque laoreet suspendisse interdum consectetur libero id faucibus
+            nisl tincidunt.Dictum fusce ut placerat orci nulla pellentesque
+            dignissim enim sit.
+          </p>
         </div>
       </div>
     </div>
