--- a/Practice/Project/index.html
+++ b/Practice/Project/index.html
@@ -147,6 +147,36 @@
             nisl tincidunt.Dictum fusce ut placerat orci nulla pellentesque
             dignissim enim sit.
           </p>
+          <div id="section-6-1-1">
+            <div id="social-media">
+              <img src="./Images/fb.jpg" />
+            </div>
+            <div id="social-media">
+              <img src="./Images/insta.jpg" />
+            </div>
+            <div id="social-media">
+              <img src="./Images/twitter.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="section-7">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14684.844235664259!2d72.57069617607537!3d23.052722560780662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e847ce3f1c9a9%3A0x52ef426adab5417c!2sCaf%C3%A9%20Coffee%20Day!5e0!3m2!1sen!2sin!4v1692033282302!5m2!1sen!2sin"
+          width="650"
+          height="400"
+          style="border: 0"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <div class="contact-us">
+          <form>
+            <h1>Contact Us</h1>
+            <input type="text" id="Name" placeholder="Your Name" />
+            <input type="text" id="Gender" placeholder="Gender" />
+            <input type="text" id="Message" placeholder="Messages" />
+            <button class="btn_4">Send Message</button>
+          </form>
         </div>
       </div>
     </div>
