--- a/Practice/Border/Border.html
+++ b/Practice/Border/Border.html
@@ -152,7 +152,77 @@
         border: 10px solid red;
         background-color: orange;
         color: aqua;
-        border-top-left-radius: 30px 30px;
+        border-top-left-radius: 30px ;
+    }
+    .box-15{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-top-right-radius: 30px ;
+    }
+    .box-16{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-bottom-left-radius: 30px ;
+    }
+    .box-17{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-bottom-right-radius: 30px;
+    }
+    .box-18{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-top-color: blue;
+    }
+    .box-19{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-bottom-color: blue;
+    }
+    .box-20{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-left-color: blue;
+    }
+    .box-21{
+        width: 300px;
+        height: 300px;
+        margin: 10px auto;
+        background-clip: padding-box;
+        border: 10px solid red;
+        background-color: orange;
+        color: aqua;
+        border-right-color: blue;
     }
 </style>
 <body>
@@ -185,6 +255,20 @@
     <hr>
     <div class="box-13">Border-Style-None</div>
     <hr>
-    <div class="box-14">Border-End-Radius</div>
+    <div class="box-14">Border-Top-Left-Radius</div>
+    <hr>
+    <div class="box-15">Border-Top-Right-Radius</div>
+    <hr>
+    <div class="box-16">Border-Bottom-Left-Radius</div>
+    <hr>
+    <div class="box-17">Border-Bottom-Right-Radius</div>
+    <hr>
+    <div class="box-18">Border-Top-Color</div>
+    <hr>
+    <div class="box-19">Border-Bottom-Color</div>
+    <hr>
+    <div class="box-20">Border-Left-Color</div>
+    <hr>
+    <div class="box-21">Border-Right-Color</div>
 </body>
 </html>
