--- a/Practice/Project/index.html
+++ b/Practice/Project/index.html
@@ -179,6 +179,60 @@
           </form>
         </div>
       </div>
+      <div id="footer">
+        <div class="footer-container">
+          <div>
+            <img src="./Images/footer-log-1.jpg">
+          </div>
+          <div>
+            <h1>Your Company</h1>
+            <pre>
+Halimun Street 25
+Jakarta, Indonesia
+12850
+            </pre>
+            <p>www.yourdomain.com</p>
+          </div>
+          <div>
+            <h2>Your Company</h2>
+            <dl>
+              <dd>Home</dd>
+              <dd>About</dd>
+              <dd>Blog</dd>
+              <dd>Menu</dd>
+              <dd>Store</dd>
+              <dd>Contact</dd>
+            </dl>
+          </div>
+          <div>
+            <h2>Lorem Ipsum</h2>
+            <dl>
+              <dd>Neque</dd>
+              <dd>Suspendisse</dd>
+              <dd>Dictum</dd>
+              <dd>Porttitor</dd>
+              <dd>Tincidunt</dd>
+              <dd>Enim lobortis</dd>
+            </dl>
+          </div>
+          <div>
+            <h2>Sit Amet</h2>
+            <dl>
+              <dt>Neque</dt>
+              <dt>Suspendisse</dt>
+              <dt>Dictum</dt>
+              <dt>Porttitor</dt>
+              <dt>Tincidunt</dt>
+              <dt>Enic lobortis</dt>
+            </dl>
+          </div>
+          <div>
+            <img src="./Images/footer-log-2.jpg">
+            <p>Copyright &copy; 2020 Freepik</p>
+            <p>Company S.L. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
