--- a/Practice/Border/Border.html
+++ b/Practice/Border/Border.html
@@ -224,6 +224,20 @@
         color: aqua;
         border-right-color: blue;
     }
+    .box-22 {
+        height: 200px;
+        width: 200px;
+        margin: 10px auto;
+        color: blue;
+    }
+    .box-22 img{
+        height: 200px;
+        width: 200px;
+        margin: 10px auto;
+        border-top-left-radius: 50%;
+        border-top-right-radius: 50%;
+        border-bottom-right-radius: 50%
+    }
 </style>
 <body>
     <h1>Border In CSS</h1>
@@ -270,5 +284,10 @@
     <div class="box-20">Border-Left-Color</div>
     <hr>
     <div class="box-21">Border-Right-Color</div>
+    <hr>
+    <div class="box-22">
+        Border-Top-Left-Radius Border-Top-Right-Radius Border-Bottom-Right-Radius
+        <img src="./../Images/flower_img.jpg">
+    </div>
 </body>
 </html>
