--- a/practice/psd/practice-psd/practice-1/index.html
+++ b/practice/psd/practice-psd/practice-1/index.html
@@ -101,29 +101,44 @@
         </div>
       </div>
       <div id="footer">
-        <div id="footer-1">
-          <h1>Mariachi</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit. Aliquam at
-            dignissim nunc,<br>id maximus ex. Etiam nec dignissim elit, at<br>
-            dignissim enim.
-          </p>
-          <div id="social-media">
-            <img src="./Images/Facebook.jpg" />
-            <img src="./Images/Instagram.jpg" />
-            <img src="./Images/Twitter.jpg" />
-            <img src="./Images/WhatsApp.jpg" />
-          </div>
-        </div>
-        <div id="footer-2">
+        <div class="footer-conatiner">
           <div>
-            <dl class="dl">
-              <dd>About</dd>
+            <h1>Mariachi</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit. Aliquam
+              at dignissim nunc,<br>id maximus ex. Etiam nec dignissim elit, at<br>
+              dignissim enim.
+            </p>
+            <img src="./images/fb.jpg">
+            <img src="./images/instagram.jpg">
+            <img src="./images/twitter.jpg">
+            <img src="./images/whatsapp.jpg">         
+          </div>
+          <div>
+            <h2>About</h2>
+            <dl>
               <dd>History</dd>
               <dd>Our Team</dd>
               <dd>Brand Guideline</dd>
-              <dd>Term & Condition</dd>
+              <dd>Terms & Condition</dd>
               <dd>Privacy Policy</dd>
+            </dl>
+          </div>
+          <div>
+            <h2>Services</h2>
+            <dl>
+              <dd>How to Order</dd>
+              <dd>Our Product</dd>
+              <dd>Offers</dd>
+              <dd>Promo</dd>
+              <dd>Payment Method</dd>
+            </dl>
+          </div>
+          <div>
+            <h2>Other</h2>
+            <dl>
+              <dd>Contact Us</dd>
+              <dd>Help</dd>
             </dl>
           </div>
         </div>
