--- a/practice/psd/practice-psd/practice-2/index.html
+++ b/practice/psd/practice-psd/practice-2/index.html
@@ -39,7 +39,46 @@
           <div id="section-2-2-1">
             <img src="./image/section-2-1-img-1.jpg" />
             <h1>America</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
+          </div>
+          <div id="section-2-2-1">
+            <img src="./image/section-2-1-img-2.jpg" />
+            <h1>Asia</h1>
+            <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
+          </div>
+          <div id="section-2-2-1">
+            <img src="./image/section-2-1-img-3.jpg" />
+            <h1>Australia</h1>
+            <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
+          </div>
+        </div>
+      </div>
+      <div id="section-3">
+        <div id="section-3-1">
+          <h1>Pricing</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />Vivamus
+            lacinia odio vitae vestibulum vestibulum.
+          </p>
+        </div>
+        <div id="section-3-2">
+          <div id="section-3-2-1">
+            <img src="./image/icon.jpg" />
+            <h1>Basic</h1>
+            <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
+            <button class="btn-1">$.150.00</button>
+         </div>
+          <div id="section-3-2-1">
+            <img src="./image/icon.jpg" />
+            <h1>Professional</h1>
+            <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
+            <button class="btn-1">$.200.00</button>
+          </div>
+          <div id="section-3-2-1">
+            <img src="./image/icon.jpg" />
+            <h1>Ultimate</h1>
+            <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
+            <button class="btn-1">$.250.00</button>
           </div>
         </div>
       </div>
