--- a/practice/psd/practice-psd/practice-2/index.html
+++ b/practice/psd/practice-psd/practice-2/index.html
@@ -67,7 +67,7 @@
             <h1>Basic</h1>
             <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
             <button class="btn-1">$.150.00</button>
-         </div>
+          </div>
           <div id="section-3-2-1">
             <img src="./image/icon.jpg" />
             <h1>Professional</h1>
@@ -80,6 +80,79 @@
             <p>Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.</p>
             <button class="btn-1">$.250.00</button>
           </div>
+        </div>
+      </div>
+      <div id="section-4">
+        <div id="section-4-1">
+          <img src="./image/img-4-1.jpg" />
+        </div>
+        <div id="section-4-2">
+          <h1>Amazing Dance</h1>
+          <p>
+            Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.<br />Vivamus
+            lacinia odio vitae vestibulum vestibulum.
+          </p>
+          <button class="btn-2">Read More</button>
+        </div>
+      </div>
+      <div id="section-5">
+        <div id="section-5-1">
+          <h1>Best dance</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
+            Vivamus lacinia odio vitae<br />vestibulum vestibulum.
+          </p>
+          <button class="btn-2">Read More</button>
+        </div>
+        <div id="section-5-2">
+          <img src="./image/img-4-2.jpg" />
+        </div>
+      </div>
+      <div id="section-6">
+        <div id="section-6-1">
+          <h1>Our Statistics</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />Vivamus
+            lacinia odio vitae vestibulum vestibulum.
+          </p>
+        </div>
+        <div id="section-6-2">
+          <div id="section-6-2-1">
+            <h1>1240+</h1>
+            <p>Club</p>
+          </div>
+          <div id="section-6-2-2">
+            <h1>2000+</h1>
+            <p>Active Member</p>
+          </div>
+          <div id="section-6-2-3">
+            <h1>1.000+</h1>
+            <p>Community</p>
+          </div>
+        </div>
+      </div>
+      <div id="section-7">
+        <div id="section-7-1">
+          <h1>
+            Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
+            Vivamus lacinia odio vitae<br />vestibulum vestibulum.
+          </h1>
+          <p>Herbert Simon</p>
+        </div>
+      </div>
+      <div id="section-8">
+        <div id="section-8-1">
+          <h1>Subscribe</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />Vivamus
+            lacinia odio vitae vestibulum vestibulum.
+          </p>
+        </div>
+        <div id="section-8-2">
+          <form>
+            <input type="text" placeholder="Your Email">
+            <button class="btn-3">Subscribe</button>
+          </form>
         </div>
       </div>
     </div>
