--- a/practice/psd/practice-psd/practice-2/index.html
+++ b/practice/psd/practice-psd/practice-2/index.html
@@ -150,9 +150,54 @@
         </div>
         <div id="section-8-2">
           <form>
-            <input type="text" placeholder="Your Email">
+            <input type="text" placeholder="Your Email" />
             <button class="btn-3">Subscribe</button>
           </form>
+        </div>
+      </div>
+      <div id="footer">
+        <div id="footer-conatiner">
+          <div>
+            <h1>Musicology</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit.
+              Aliquam at dignissim nunc,<br />id maximus ex. Etiam nec dignissim
+              elit, at<br />
+              dignissim enim.
+            </p>
+            <img src="./image/facebook.jpg" />
+            <img src="./image/instagram.jpg" />
+            <img src="./image/twitter.jpg" />
+            <img src="./image/whatsapp.jpg" />
+          </div>
+          <div>
+            <h2>About</h2>
+            <dl>
+              <dd>History</dd>
+              <dd>Our Team</dd>
+              <dd>Brand Guideline</dd>
+              <dd>Terms & Condition</dd>
+              <dd>Privacy Policy</dd>
+            </dl>
+          </div>
+          <div>
+            <h2>Services</h2>
+            <dl>
+              <dd>How to Order</dd>
+              <dd>Our Product</dd>
+              <dd>Order Status</dd>
+              <dd>Promo</dd>
+              <dd>Payment Method</dd>
+            </dl>
+          </div>
+          <div>
+            <h2>Other</h2>
+            <dl>
+              <dd>Contact Us</dd>
+              <dd>Help</dd>
+              <dd>Privacy</dd>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
