--- a/practice/psd/practice-psd/practice-3/index.html
+++ b/practice/psd/practice-psd/practice-3/index.html
@@ -30,10 +30,14 @@
             iusmod tempor incididunt<br />ut labore et dolore magna.
           </p>
         </div>
-        <div id="header-2-2">
+        <div id="pos-img-1">
           <img id="img-1" src="./images/img-1.jpg" />
-          <!-- <img id="img-2" src="./images/img-2.jpg" />
-          <img id="img-3" src="./images/img-3.jpg" /> -->
+        </div>
+        <div id="pos-img-2">
+          <img id="img-2" src="./images/img-2.jpg" />
+        </div>
+        <div id="pos-img-3">
+          <img id="img-3" src="./images/img-3.jpg" />
         </div>
       </div>
     </div>
@@ -150,8 +154,8 @@
       </div>
       <div id="section-7">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do<br>
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut<br>enim
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do<br />
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut<br />enim
           ad minim veniam, quis
         </p>
         <h1>Lorem Ipsum</h1>
@@ -159,6 +163,10 @@
       <div id="section-8">
         <div id="section-8-1">
           <h1>Title Here</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+            lacinia odio vitae vestibulum vestibulum.
+          </p>
         </div>
       </div>
     </div>
