--- a/practice/psd/practice-psd/practice-3/index.html
+++ b/practice/psd/practice-psd/practice-3/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div id="header-bg">
@@ -164,9 +171,56 @@
         <div id="section-8-1">
           <h1>Title Here</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus<br />
             lacinia odio vitae vestibulum vestibulum.
           </p>
+          <form>
+            <input type="text" placeholder="Your Email" />
+            <button class="btn-5">Subscribe</button>
+          </form>
+        </div>
+      </div>
+      <div id="footer">
+        <div id="footer-1">
+          <h1>Title Here</h1>
+          <p>
+            Lorem ipsum dolor sit amet,<br />consectetur adipiscing elit.
+            Aliquam at<br />
+            dignissim nunc, id maximus ex. Etiam <br />nec dignissim elit, at
+            dignissim enim.
+          </p>
+          <i class="fa-brands fa-square-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-square-whatsapp"></i>
+        </div>
+        <div id="footer-2">
+          <h1>About</h1>
+          <dl>
+            <dd>History</dd>
+            <dd>Our Team</dd>
+            <dd>Brand Guidelines</dd>
+            <dd>Terms & Condition</dd>
+            <dd>Privacy Policy</dd>
+          </dl>
+        </div>
+        <div id="footer-3">
+          <h1>Services</h1>
+          <dl>
+            <dd>How to Order</dd>
+            <dd>Our Product</dd>
+            <dd>Order Status</dd>
+            <dd>Promo</dd>
+            <dd>Payment Method</dd>
+          </dl>
+        </div>
+        <div id="footer-4">
+          <h1>Other</h1>
+          <dl>
+            <dd>Contact Us</dd>
+            <dd>Help</dd>
+            <dd>Privacy</dd>
+          </dl>
         </div>
       </div>
     </div>
