--- a/practice/position/task/index.html
+++ b/practice/position/task/index.html
@@ -7,53 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="conatnier">
+    <div class="container">
       <div class="row">
-        <div id="col-11">
-          <div class="img-1">
-            <img src="./img/img-1.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-2">
-            <img src="./img/img-2.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-3">
-            <img src="./img/img-3.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-4">
-            <img src="./img/img-4.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-5">
-            <img src="./img/img-5.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-6">
-            <img src="./img/img-6.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-7">
-            <img src="./img/img-7.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-8">
-            <img src="./img/img-8.jpg" />
-          </div>
-        </div>
-        <div id="col-11">
-          <div class="img-9">
-            <img src="./img/img-9.jpg" />
-          </div>
-        </div>
+        <img class="img-1" src="./img/img-1.jpg" />
+        <img class="img-2" src="./img/img-2.jpg" />
+        <img class="img-3" src="./img/img-3.jpg" />
+      </div>
+      <div class="row">
+        <img class="img-4" src="./img/img-4.jpg" />
+        <img class="img-5" src="./img/img-5.jpg" />
+        <img class="img-6" src="./img/img-6.jpg" />
+      </div>
+      <div class="row">
+        <img class="img-7" src="./img/img-7.jpg" />
+        <img class="img-8" src="./img/img-8.jpg" />
+        <img class="img-9" src="./img/img-9.jpg" />
       </div>
     </div>
   </body>
