--- a/practice/psd/practice-psd/practice-4/Index.html
+++ b/practice/psd/practice-psd/practice-4/Index.html
@@ -14,6 +14,9 @@
     />
   </head>
   <body>
+    <div id="mask-1">
+      <img src="./images/shape_1.png">
+    </div>
     <div class="header">
       <div id="nav">
         <img src="./images/logo.jpg" />
@@ -31,6 +34,9 @@
           Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do
           iusmod tempor incididunt<br />ut labore et dolore magna.
         </p>
+      </div>
+      <div id="mask-2">
+        <img src="./images/shape_2.png">
       </div>
     </div>
     <div id="container">
