--- a/practice/psd/practice-psd/media_query_psd/media_query.html
+++ b/practice/psd/practice-psd/media_query_psd/media_query.html
@@ -10,16 +10,26 @@
     <div id="header">
       <div id="nav-container">
         <div id="nav-logo">
-            <img src="./images/logo.png">
+          <img src="./images/logo.png" />
         </div>
         <div id="nav">
-            <a href="#">Home</a>
-            <a href="#">Info</a>
-            <a href="#">Gallery</a>
-            <a href="#">Contact</a>
-            <a href="#">FAQ</a>
-          </div>
+          <a href="#">Home</a>
+          <a href="#">Info</a>
+          <a href="#">Gallery</a>
+          <a href="#">Contact</a>
+          <a href="#">FAQ</a>
+        </div>
       </div>
+    </div>
+    <div class="section-1">
+      <h1>Feel The Nature</h1>
+      <img src="./images/img.png" />
+      <p>Nature is a miracle</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod
+        tempordunt ut labore et dolore magna aliqua quis ipsum pendisse ultrices
+        gravida risus commodo viverra maecenas accumsan lacus vel facilisis.
+      </p>
     </div>
   </body>
 </html>
