--- a/practice/psd/practice-psd/practice-5/index.html
+++ b/practice/psd/practice-psd/practice-5/index.html
@@ -33,15 +33,50 @@
       <div id="slogan">It is a good time for the great taste of burgers</div>
       <div id="burger-txt"><b>Burger</b></div>
       <div id="week-txt"><b>Week</b></div>
-      <div>
+      <div id="content-1">
         <div id="glow-img">
           <img src="./images/glow.jpg" />
         </div>
-        <div id="coke-img"></div>
-        <div id="fries-img"></div>
-        <div id="burger-img"></div>
-        <div id="discount-img"></div>
+        <div id="coke-img">
+          <img src="./images/drinks.jpg" />
+        </div>
+        <div id="fries-img">
+          <img src="./images/french_fries.jpg" />
+        </div>
+        <div id="burger-img">
+          <img src="./images/burger_image.png" />
+        </div>
+        <div id="discount-img">
+          <img src="./images/Ellipse.png" />
+          <!-- <img src="./images/Ellipse (1).png"/> -->
+          <p>$5.49<br />Only</p>
+        </div>
       </div>
+    </div>
+    <div id="content-2">
+      <div id="content-2-1">
+        <img src="./images/img-1.png" />
+        <h1>Try It Today</h1>
+        <p>Most Popular Burger</p>
+      </div>
+      <div id="content-2-2">
+        <img src="./images/img-2.png" />
+        <h1>Try It Today</h1>
+        <p>More Fun<br />More Taste</p>
+        <img src="./images/img-3.png" />
+        <h2>Try IT Today</h2>
+        <h3>Fresh & Chili</h3>
+      </div>
+    </div>
+    <div id="content-3">
+      <button class="btn">Always Tasty Burger</button>
+      <h1><b>Choose & Enjoy</b></h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. <br>Quis ipsum
+        suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
+        lacus vel facilisis.
+      </p>
     </div>
   </body>
 </html>
