--- a/practice/psd/index.html
+++ b/practice/psd/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="header">
@@ -112,24 +119,33 @@
           </p>
         </div>
         <div id="section-5-2">
-          <div id="section-5-2-1">
+          <div id="section-5-2-1" class="overlay-container">
             <img src="./Images/stroe-img-1.jpg" />
+            <div class="overlay-padding">
+              <div class="overlay-caption">Corpertum</div>
+            </div>
             <p>
               A lacus vestibulum sed. Amet purus gravida quis blandit turpis.
               Enim facilisis gravida neque convallis.
             </p>
             <button class="btn_3">Visit Now</button>
           </div>
-          <div id="section-5-2-1">
+          <div id="section-5-2-2" class="overlay-container">
             <img src="./Images/store-img-2.jpg" />
+            <div class="overlay-padding">
+              <div class="overlay-caption">Vesttibulun</div>
+            </div>
             <p>
               A lacus vestibulum sed. Amet purus gravida quis blandit turpis.
               Enim facilisis gravida neque convallis.
             </p>
             <button class="btn_3">Visit Now</button>
           </div>
-          <div id="section-5-2-1">
+          <div id="section-5-2-3" class="overlay-container">
             <img src="./Images/store-img-3.jpg" />
+            <div class="overlay-padding">
+              <div class="overlay-caption">Convallis</div>
+            </div>
             <p>
               A lacus vestibulum sed. Amet purus gravida quis blandit turpis.
               Enim facilisis gravida neque convallis.
@@ -148,13 +164,13 @@
             dignissim enim sit.
           </p>
           <div id="section-6-1-1">
-            <div id="social-media">
+            <div class="social-media">
               <img src="./Images/fb.jpg" />
             </div>
-            <div id="social-media">
+            <div class="social-media">
               <img src="./Images/insta.jpg" />
             </div>
-            <div id="social-media">
+            <div class="social-media">
               <img src="./Images/twitter.jpg" />
             </div>
           </div>
@@ -163,12 +179,12 @@
       <div id="section-7">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14684.844235664259!2d72.57069617607537!3d23.052722560780662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e847ce3f1c9a9%3A0x52ef426adab5417c!2sCaf%C3%A9%20Coffee%20Day!5e0!3m2!1sen!2sin!4v1692033282302!5m2!1sen!2sin"
-          width="650"
-          height="400"
+          width="600"
+          height="450"
           style="border: 0"
           loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
         <div class="contact-us">
           <form>
             <h1>Contact Us</h1>
@@ -182,7 +198,7 @@
       <div id="footer">
         <div class="footer-container">
           <div>
-            <img src="./Images/footer-log-1.jpg">
+            <img src="./Images/footer-log-1.jpg" />
           </div>
           <div>
             <h1>Your Company</h1>
@@ -190,29 +206,29 @@
 Halimun Street 25
 Jakarta, Indonesia
 12850
-            </pre>
+          </pre>
             <p>www.yourdomain.com</p>
           </div>
           <div>
-            <h2>Your Company</h2>
+            <h2>Sitemap</h2>
             <dl>
-              <dd>Home</dd>
-              <dd>About</dd>
-              <dd>Blog</dd>
-              <dd>Menu</dd>
-              <dd>Store</dd>
-              <dd>Contact</dd>
+              <dt>Home</dt>
+              <dt>About</dt>
+              <dt>Blog</dt>
+              <dt>Menu</dt>
+              <dt>Store</dt>
+              <dt>Contact</dt>
             </dl>
           </div>
           <div>
             <h2>Lorem Ipsum</h2>
             <dl>
-              <dd>Neque</dd>
-              <dd>Suspendisse</dd>
-              <dd>Dictum</dd>
-              <dd>Porttitor</dd>
-              <dd>Tincidunt</dd>
-              <dd>Enim lobortis</dd>
+              <dt>Neque</dt>
+              <dt>suspendisse</dt>
+              <dt>Dictum</dt>
+              <dt>Porttitor</dt>
+              <dt>Tincidunt</dt>
+              <dt>Enim lobortis</dt>
             </dl>
           </div>
           <div>
