--- a/practice/psd/practice-psd/practice-5/index.html
+++ b/practice/psd/practice-psd/practice-5/index.html
@@ -7,49 +7,49 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="header">
-      <div id="contact-container">
-        <div id="logo">
-          <a href="#">
-            <img src="./images/logo.jpg" />
-          </a>
+    <div id="bg-container">
+      <div id="header">
+        <div id="contact-container">
+          <div id="logo">
+            <a href="#">
+              <img src="./images/logo.jpg" />
+            </a>
+          </div>
+          <div id="contact">
+            <img src="./images/scooter.png" />
+            <p>Express Delivery +1213131441</p>
+          </div>
         </div>
-        <div id="contact">
-          <img src="./images/scooter.png" />
-          <p>Express Delivery +1213131441</p>
+        <div id="nav-container">
+          <div id="nav-empty-space"></div>
+          <div id="nav">
+            <a href="#">Home</a>
+            <a href="#">Menu</a>
+            <a href="#">Out story</a>
+            <a href="#">Contact Us</a>
+          </div>
         </div>
       </div>
-      <div id="nav-container">
-        <div id="nav-empty-space"></div>
-        <div id="nav">
-          <a href="#">Home</a>
-          <a href="#">Menu</a>
-          <a href="#">Out story</a>
-          <a href="#">Contact Us</a>
-        </div>
-      </div>
-    </div>
-    <div id="content">
-      <div id="slogan">It is a good time for the great taste of burgers</div>
-      <div id="burger-txt"><b>Burger</b></div>
-      <div id="week-txt"><b>Week</b></div>
       <div id="content-1">
-        <div id="glow-img">
-          <img src="./images/glow.jpg" />
-        </div>
-        <div id="coke-img">
-          <img src="./images/drinks.jpg" />
-        </div>
-        <div id="fries-img">
-          <img src="./images/french_fries.jpg" />
-        </div>
-        <div id="burger-img">
-          <img src="./images/burger_image.png" />
-        </div>
-        <div id="discount-img">
-          <img src="./images/Ellipse.png" />
-          <!-- <img src="./images/Ellipse (1).png"/> -->
-          <p>$5.49<br />Only</p>
+        <div id="slogan">It is a good time for the great taste of burgers</div>
+        <div id="burger-txt"><b>Burger</b></div>
+        <div id="week-txt"><b>Week</b></div>
+        <div id="content-1-1">
+          <div id="glow-img">
+            <img src="./images/glow.jpg" />
+          </div>
+          <div id="coke-img">
+            <img src="./images/drinks.jpg" />
+          </div>
+          <div id="fries-img">
+            <img src="./images/french_fries.jpg" />
+          </div>
+          <div id="burger-img">
+            <img src="./images/burger_image.png" />
+          </div>
+          <div id="discount-img">
+            <img src="./images/Ellipse.png" />
+          </div>
         </div>
       </div>
     </div>
@@ -73,10 +73,36 @@
       <h1><b>Choose & Enjoy</b></h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. <br>Quis ipsum
+        tempor incididunt ut labore et dolore magna aliqua. <br />Quis ipsum
         suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
         lacus vel facilisis.
       </p>
+    </div>
+    <div id="content-4">
+      <div id="content-4-1">
+        <img src="./images/Burger.png" />
+        <h1><b>Lorem ipsum dolor</b></h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do.
+        </p>
+        <button class="btn-1">Order Now</button>
+      </div>
+      <div id="content-4-2">
+        <img src="./images/burger_image.png" />
+        <h1><b>Lorem ipsum dolor</b></h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do.
+        </p>
+        <button class="btn-1">Order Now</button>
+      </div>
+      <div id="content-4-3">
+        <img src="./images/Burger.png" />
+        <h1>Lorem ipsum dolor</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do.
+        </p>
+        <button class="btn-1">Order Now</button>
+      </div>
     </div>
   </body>
 </html>
