--- a/practice/psd/practice-psd/practice-5/index.html
+++ b/practice/psd/practice-psd/practice-5/index.html
@@ -104,5 +104,23 @@
         <button class="btn-1">Order Now</button>
       </div>
     </div>
+    <div id="content-5">
+      <div id="content-5-1">
+        <h1>Discover</h1>
+        <h2><strong>Upcoming Events</strong></h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do
+          eiusmod tempor incididunt<br />ut labore et dolore magna aliqua. Quis
+          ipsum<br />suspendisse ultrices gravida. Risus commodo <br />viverra
+          maecenas accumsan lacus vel facilisis.
+        </p>
+        <img src="./images/bullent_piont.png">
+      </div>
+      <div id="content-5-2">
+        <img src="./images/Burger_Image_1.png" />
+      </div>
+    </div>
+    <div id="content-6">
+    </div>
   </body>
 </html>
