--- a/practice/psd/practice-psd/practice-5/index.html
+++ b/practice/psd/practice-psd/practice-5/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div id="bg-container">
@@ -69,7 +76,7 @@
       </div>
     </div>
     <div id="content-3">
-      <button class="btn">Always Tasty Burger</button>
+      <button class="btn btn-1">Always Tasty Burger</button>
       <h1><b>Choose & Enjoy</b></h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -85,7 +92,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do.
         </p>
-        <button class="btn-1">Order Now</button>
+        <button class="btn btn-2">Order Now</button>
       </div>
       <div id="content-4-2">
         <img src="./images/burger_image.png" />
@@ -93,7 +100,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do.
         </p>
-        <button class="btn-1">Order Now</button>
+        <button class="btn btn-2">Order Now</button>
       </div>
       <div id="content-4-3">
         <img src="./images/Burger.png" />
@@ -101,7 +108,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur<br />adipiscing elit, sed do.
         </p>
-        <button class="btn-1">Order Now</button>
+        <button class="btn btn-2">Order Now</button>
       </div>
     </div>
     <div id="content-5">
@@ -114,13 +121,71 @@
           ipsum<br />suspendisse ultrices gravida. Risus commodo <br />viverra
           maecenas accumsan lacus vel facilisis.
         </p>
-        <img src="./images/bullent_piont.png">
+        <img src="./images/bullent_piont.png" />
       </div>
       <div id="content-5-2">
         <img src="./images/Burger_Image_1.png" />
       </div>
     </div>
     <div id="content-6">
+      <div id="section-6-1">
+        <img src="./images/content-6-burger.png" id="img-1" />
+        <img src="./images/content-6-bottle.png" id="img-2" />
+      </div>
+      <div id="plate_img">
+        <img src="./images/content-6-image.png" id="img-3" />
+      </div>
+      <div id="section-6-2">
+        <form>
+          <h1>Reservation</h1>
+          <h2><b>Book your table</b></h2>
+          <input type="text" placeholder="Enter your Name." />
+          <input
+            type="text"
+            name="name"
+            placeholder="Enter your Email Address."
+          />
+          <br />
+          <br />
+          <input type="number" placeholder="Date" />
+          <input type="number" placeholder="Time" />
+          <br />
+          <br />
+          <input type="number" placeholder="People" />
+          <button class="btn btn-3">Find a Table</button>
+        </form>
+      </div>
+    </div>
+    <div id="footer">
+      <div id="footer-1">
+        <img src="./images/footer.png" />
+      </div>
+      <div id="footer-2">
+        <img src="./images/footer_logo.png" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed<br />do
+          eiusmod tempor incididunt ut labore et dolore magna<br />aliqua. Quis
+          ipsum suspendisse ultrices gravida. Risus<br />commodo viver ra
+          maecenas accumsan lacus vel facilisis.
+        </p>
+        <h2>&copy;Company Name 2023,All Rights Reserved.</h2>
+      </div>
+      <div id="footer-3">
+        <div id="footer-3-1">
+          <img src="./images/footer_location_Icon.png" />
+          <p><b>Main Road, Building Name, Country</b></p>
+        </div>
+        <div id="footer-3-2">
+          <img src="./images/footer_email.png" />
+          <p><b>info@companyname.com</b></p>
+        </div>
+        <div id="footer-3-3">
+          <i class="fa-brands fa-square-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-square-whatsapp"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
