--- a/practice/clippath/clippath.html
+++ b/practice/clippath/clippath.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clip path</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        .box{
-            background-image: url(./../psd/images/bg-images.jpg);
-            height: 100vh;
-            /* clip-path: polygon(100% 0, 100% 71%, 50% 100%, 0 73%, 0 0); */
-            clip-path: polygon(100% 0, 100% 92%, 50% 100%, 0 92%, 0 0);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="box"></div>
+    </div>
 </body>
 </html>
