--- a/practice/clippath/clippath.html
+++ b/practice/clippath/clippath.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box">
+        <div class="nav">
+            <img src="./logo.jpg" id="logo">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Pricing</a>
+            <a href="#">Team</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </div>
+        
     </div>
 </body>
 </html>
