--- a/practice/clippath/clippath.html
+++ b/practice/clippath/clippath.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clip path</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="box">
-        <div class="nav">
-            <img src="./logo.jpg" id="logo">
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Pricing</a>
-            <a href="#">Team</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-        </div>
+      <div class="nav">
+        <img src="./logo.jpg" id="logo" />
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Pricing</a>
+        <a href="#">Team</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </div>
+      <div>
+        <h1>Our Clients Are Our First Priority</h1>
+        <h2>Welcome to Sky</h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.<br>Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s.when an unknown<br>printer took a galley of type and
+          scrambled it to make a type specimen book.
+        </p>
+      </div>
+      <div id="button">
+        <button id="btn-1">Get Started Now</button>
+        <button id="btn-2">Learn More</button>
+      </div>
+      <div id="footer">
         
+      </div>
     </div>
-</body>
+  </body>
 </html>
